<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C12626"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:srcCompat="@drawable/logooo"
        android:layout_marginTop="30sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:text="@string/crear"
        android:textAlignment="center"
        android:textColor="@color/verdeSena"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edt_nombres"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edt_apellidos"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edt_Celular"
        android:inputType="phone"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_crear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:backgroundTint="@color/verdeSena"
        android:text="@string/btn_registrar"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>