<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C12626"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/LOGIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:textAlignment="center"
        android:textColor="@color/verdeSena"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="30sp"/>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginBottom="30sp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/logooo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textStyle="bold" />



    <Button
        android:id="@+id/btn10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/verdeSena"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/rojogo"
        android:text="@string/btn_GOOGLE"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_Cuenta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_Cuenta"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_recupe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/r_pass"
        android:layout_marginTop="5sp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />



</LinearLayout>